--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Abdullah Dekebo Beketa]
-description: [Welcome to My Personal Github page!]
+description: [Thanks!]
 author: Abdullah D
